--- a/pages/componentes.html
+++ b/pages/componentes.html
@@ -95,7 +95,17 @@
     </header>
 
     <h2 class="text-center">Componentes</h2>
+    <main>
+        <nav>
 
+        </nav>
+        <section>
+
+            
+        </section>
+
+
+    </main>
 
     <footer>
         <section class="logo_bien_header">
