--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -96,17 +96,17 @@
 
     <h2 class="text-center">Nosotros</h2>
 
-    <section>
+    <section class="container-fluid nosotros">
         <p class="historia">Tienda Gamer ubicada en Galería Jardín comenzó con dos amigos, Juan y Pedro, quienes compartían la misma pasión por la tecnología y los videojuegos. Después de trabajar juntos en una empresa de informática, decidieron emprender juntos su propio negocio enfocado en los juegos y la tecnología.
 
             Tras meses de búsqueda, encontraron el local perfecto en el corazón de la ciudad y comenzaron a construir su tienda Gamer. Los primeros días no fueron fáciles, pero con trabajo duro y dedicación, Juan y Pedro comenzaron a hacerse un nombre en la zona. Ofreciendo productos de alta calidad, precios competitivos y un servicio excepcional, la tienda Gamer empezó a ganar clientes fieles que recomendaban sus productos a amigos y familiares.
             
             Con el tiempo, la tienda Gamer se convirtió en un lugar muy conocido en la comunidad local y Juan y Pedro se convirtieron en expertos en tecnología y videojuegos. La experiencia personalizada que ofrecían a cada cliente y su enfoque en entender las necesidades individuales de cada uno, hizo que la tienda fuera un éxito. Hoy en día, la tienda Gamer en Galería Jardín es una empresa exitosa gracias al trabajo duro y dedicación de estos dos amigos apasionados por los videojuegos y la tecnología.</p>
     
-        <div class="map">
+        <div class="container-fluid map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.09782646112!2d-58.377427974272535!3d-34.60168770739096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbcb8faf9cfd%3A0xa2fe32fe5e1e45cf!2sGaler%C3%ADa%20el%20Jardin!5e0!3m2!1ses-419!2sar!4v1682203434952!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p>Galería Jardin, Florida 537, CABA.</p>
-            <p>Local 14</p>   
+            <p>Local 14</p>
         </div>
 
     </section>
