--- a/pages/componentes.html
+++ b/pages/componentes.html
@@ -95,16 +95,146 @@
     </header>
 
     <h2 class="text-center">Componentes</h2>
-    <main>
-        <nav>
+    <main class="container-fluid">
 
-        </nav>
-        <section>
+            <div>
+                <!-- Inputs -->
+                <input type="radio" name="seleccionado" id="amd">
+                <input type="radio" name="seleccionado" id="intel">
+                <input type="radio" name="seleccionado" id="ati">
+                <input type="radio" name="seleccionado" id="nvidia">
 
-            
-        </section>
+                <!-- label de los inputs -->
+                <div class="container-labels selec_componentes">
+                    
+                    <div class="accordion accordion-flush acordion_main" id="accordionFlushExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Procesadores
+                            </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                <label for="amd">Amd</label>
+                            </div>
+                            <div class="accordion-body">
+                                <label for="intel">Intel</label>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                Placas de video
+                            </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">
+                                    <label for="ati">Ati</label>
+                                </div>
+                                <div class="accordion-body">
+                                    <label for="nvidia">Nvidia</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="container-fluid row gap-4 justify-content-center text-center padre-cards">
+                    <div class="card amd" style="width: 18rem;">
+                        <img src="../img/micro-amd-ryzen-5-5600g-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">MICRO AMD RYZEN 5 5600G</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$109.200,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
 
+                    <div class="card amd" style="width: 18rem;">
+                        <img src="../img/micro-amd-ryzen-7-5700g-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">MICRO AMD RYZEN 7 5700G</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$152.800,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card intel" style="width: 18rem;">
+                        <img src="../img/micro-intel-core-i5-10400-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">MICRO INTEL CORE I5 10400</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$93.180,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card intel" style="width: 18rem;">
+                        <img src="../img/micro-intel-core-i7-10700-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">MICRO INTEL CORE I7 10700</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$178.190,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card ati" style="width: 18rem;">
+                        <img src="../img/video-radeon-rx-580-8gb-arktek-dual-fan-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">VIDEO RADEON RX 580 8GB ARKTEK DUAL FAN</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$98.980,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card ati" style="width: 18rem;">
+                        <img src="../img/video-radeon-rx-6500-xt-4gb-gigabyte-eagle-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">VIDEO RADEON RX 6500 XT 4GB GIGABYTE EAGLE</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$171.460,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card nvidia" style="width: 18rem;">
+                        <img src="../img/video-geforce-rtx-4090-24gb-asus-rog-strix-gaming-oc-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">VIDEO GEFORCE RTX 4090 24GB ASUS ROG</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$1.312.838,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card nvidia" style="width: 18rem;">
+                        <img src="../img/video-geforce-rtx-3080-ti-12gb-zotac-gaming-trinity-oc-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">VIDEO GEFORCE RTX 3080 TI 12GB ZOTAC</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$631.240,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                    <div class="card nvidia" style="width: 18rem;">
+                        <img src="../img/video-geforce-rtx-3060-12gb-gigabyte-vision-oc-0.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">VIDEO GEFORCE RTX 3060 12GB GIGABYTE</p>
+                            <p class="card-text">Precio efectivo o transferencia:</p>
+                            <p class="text-primary">$249.000,00</p>
+                            <button>Añadir al carrito</button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
     </main>
 
     <footer>
