--- a/pages/perifericos.html
+++ b/pages/perifericos.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
-    <title>Perisfericos-TG</title>
+    <title>Perifericos-TG</title>
 </head>
 
 <body>
@@ -80,7 +80,7 @@
                     <a class="nav-link active" href="notebooks.html">Notebooks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="perisfericos.html">Perisféricos</a>
+                    <a class="nav-link active" href="perifericos.html">Periféricos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="nosotros.html">Nosotros</a>
@@ -95,7 +95,7 @@
         </nav>
     </header>
 
-    <h2 class="text-center">Perisféricos</h2>
+    <h2 class="text-center">Periféricos</h2>
 
     <footer>
         <section class="logo_bien_header">
