--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <a class="nav-link active" href="pages/notebooks.html">Notebooks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="pages/perisfericos.html">Perisféricos</a>
+                    <a class="nav-link active" href="pages/perifericos.html">Periféricos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="pages/nosotros.html">Nosotros</a>
