--- a/pages/monitores.html
+++ b/pages/monitores.html
@@ -79,7 +79,7 @@
                     <a class="nav-link active" href="notebooks.html">Notebooks</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="perisfericos.html">Perisféricos</a>
+                    <a class="nav-link active" href="perifericos.html">Periféricos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="nosotros.html">Nosotros</a>
