--- a/pages/componentes.html
+++ b/pages/componentes.html
@@ -14,7 +14,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
-    <title>Componentes-TG</title>
+    <!-- Etiquetas SEO on page -->
+    <meta name="description" content="Te damos la bienvenida a la tienda gamer y de computación más grande del pais. Aquí encontraras hardware de última generación al menor precio de mercado.">
+    <!-- Keywords -->
+    <meta name="keywords" content="hardware, gamer, tienda gamer, componentes, monitores, notebooks, teclados, mouse, placas de video, mother, procesadores, amd, intel, nvidia, ati, asus, acer, samsung, radeon, 4090, 3070, ram, logitech, sillas, lenovo, dell, juegos">
+    <title>TiendaGamer | Componentes</title>
 </head>
 <body>
     <header class="header">
