--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     <!-- AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Etiquetas SEO on page -->
+    <meta name="description" content="Te damos la bienvenida a la tienda gamer y de computación más grande del pais. Aquí encontraras hardware de última generación al menor precio de mercado.">
+    <!-- Keywords -->
+    <meta name="keywords" content="hardware, gamer, tienda gamer, componentes, monitores, notebooks, teclados, mouse, placas de video, mother, procesadores, amd, intel, nvidia, ati, asus, acer, samsung, radeon, 4090, 3070, ram, logitech, sillas, lenovo, dell, juegos">
     <title>TiendaGamer | Inicio</title>
 </head>
 <body>
