--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!-- Promociones -->
         <section class="container-fluid row gap-4 justify-content-center text-center">
-            <h2 class="gap-4 text-white">Promociones</h2>
+            <h2 class="gap-4 text-white title-h2">Promociones</h2>
             
             <div class="card" style="width: 18rem;">
                 <img src="img/mother-gigabyte-b660m-aorus-pro-ddr4-s1700-0.jpg" class="card-img-top" alt="...">
@@ -184,7 +184,7 @@
 
         <!-- Reviews -->
         <section class="container-fluid gap-4 justify-content-center text-center">
-            <h2 class="gap-4 text-white">Reviews</h2>
+            <h2 class="gap-4 text-white title-h2">Reviews</h2>
 
             <div class="video-container">
                 <div>
