--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -98,7 +98,7 @@
         </nav>
     </header>
 
-    <h2 class="text-center text-white">Nosotros</h2>
+    <h2 class="text-center text-white title-h2">Nosotros</h2>
 
     <section class="container-fluid nosotros">
         <p class="historia text-white">Tienda Gamer ubicada en Galería Jardín comenzó con dos amigos, Juan y Pedro, quienes compartían la misma pasión por la tecnología y los videojuegos. Después de trabajar juntos en una empresa de informática, decidieron emprender juntos su propio negocio enfocado en los juegos y la tecnología.
