--- a/pages/perifericos.html
+++ b/pages/perifericos.html
@@ -99,7 +99,7 @@
         </nav>
     </header>
 
-    <h2 class="text-center text-white">Periféricos</h2>
+    <h2 class="text-center text-white title-h2">Periféricos</h2>
 
     <main class="container-fluid">
 
