--- a/pages/componentes.html
+++ b/pages/componentes.html
@@ -98,7 +98,7 @@
         </nav>
     </header>
 
-    <h2 class="text-center text-white">Componentes</h2>
+    <h2 class="text-center text-white title-h2">Componentes</h2>
     <main class="container-fluid">
 
             <div>
