--- a/pages/notebooks.html
+++ b/pages/notebooks.html
@@ -98,7 +98,7 @@
         </nav>
     </header>
 
-    <h2 class="text-center text-white">Notebooks</h2>
+    <h2 class="text-center text-white title-h2">Notebooks</h2>
     <main class="container-fluid">
 
         <div>
