pre entrega final

--- a/index.html
+++ b/index.html
@@ -217,8 +217,13 @@
             </div>
         </section>
 
-        <section class="text-center">
-            <p>Derechos de autor © 2023 Tienda Gamer</p>
+        <section class="text-center row">
+            <div class="container-fluid gap-4 justify-content-center text-white">
+                <a href="pages/ayuda.html" class="nav-link active">Sugerencias o comentarios, contactenos</a>
+            </div>
+            <div>
+                <p>Derechos de autor © 2023 Tienda Gamer</p>
+            </div>
         </section>
     </footer>
 
