--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="pages/nosotros.html">Nosotros</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="pages/ayuda.html">Ayuda</a>
+                </li>
                 </ul>
                 <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -208,7 +211,7 @@
             <div class="logo">
                 <a href="index.html"><img src="img/TG.png"></a>
             </div>
-
+            
             <div class="container">
                 <p>Seguinos en nuestras redes</p>
                 <a href="https://www.instagram.com/" target="_blank">
@@ -216,9 +219,9 @@
                 </a>
             </div>
         </section>
-
-        <section class="text-center row">
-            <div class="container-fluid gap-4 justify-content-center text-white">
+        
+        <section class="text-center">
+            <div class="container gap-4 justify-content-center text-white">
                 <a href="pages/ayuda.html" class="nav-link active">Sugerencias o comentarios, contactenos</a>
             </div>
             <div>
