--- a/pages/notebooks.html
+++ b/pages/notebooks.html
@@ -88,6 +88,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="nosotros.html">Nosotros</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="ayuda.html">Ayuda</a>
+                </li>
                 </ul>
                 <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -295,7 +298,12 @@
         </section>
 
         <section class="text-center">
-            <p>Derechos de autor © 2023 Tienda Gamer</p>
+            <div class="container gap-4 justify-content-center text-white">
+                <a href="../pages/ayuda.html" class="nav-link active">Sugerencias o comentarios, contactenos</a>
+            </div>
+            <div>
+                <p>Derechos de autor © 2023 Tienda Gamer</p>
+            </div>
         </section>
     </footer>
 
